Review section content added

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         <h4>of some of the finest locally produced craft gin</h4>
         <h4>and where to sample it</h4>
     </div>
+
 <!--Categories section-->
 <div id="categorieswrapper">
     <div id="categoriesouter">
@@ -44,7 +45,7 @@
         </div>
         <div id="categoriescontent" class="container">
             <a href="placestogo.html">
-            <img src="assets/images/lucy-arbuthnot-RLR6yVWOoDk-unsplash.jpg" alt="">
+            <img src="assets/images/lucy-arbuthnot-RLR6yVWOoDk-unsplash.jpg" alt="snowy bleak road">
             </a>    
         </div>
         <div id="categorieslabel">
@@ -58,11 +59,38 @@
 </div>
 
 <!--Review section-->
-<div id="reviewsouter">
-    
+<div id="reviewswrapper">
+    <div id="reviewsimagery">
+        <h1><i class="far fa-heart fa-xl"></i>Gins loved by Prince and pauper alike</h1>
+        </div>
+    <div id="reviewsouter" class="container">
+        <div class="row">
+            <div class="review-content col-4">
+                <img class="review-content-image" src="assets\images\Jawbox-Gin_4_3.jpg" alt="Jawbox gin bottle">
+                <h2 class="review-content-heading">Review</h2>
+                <p class="review-content-text">"Honestly, Jawbox is one of the best dry gins that I’ve reviewed in some time and will definitely be one of my new go-to gins from now on!"                                   
+                </p>
+                <p class="review-content-reviewer">Review by: theginkin.com</p>
+            </div>
+            <div class="review-content col-4">
+                <img class="review-content-image" src="assets\images\original_shortcross-gin_4_3.jpg" alt="Shortcross gin bottle">
+                <h2 class="review-content-heading">Review</h2>
+                <p class="review-content-text">"Thank you Shortcross for bringing spring time to a very cold, wet London Monday!"</p>
+                <p class="review-content-reviewer">Review by: thelondonginclub.com</p>
+            </div>
+            <div class="review-content col-4">
+                <img class="review-content-image" src="assets\images\Echlinville-Gin-Irish-gin_4_3.jpg" alt="Echlinville gin bottle">
+                <h2 class="review-content-heading">Review</h2>
+                <p class="review-content-text">"Echlinville Gin doesn't come cheap but it is worth splashing out on a bottle if you're looking for a gin with a unique personality."</p>
+                <p class="review-content-reviewer">Review by: theginguide.com</p>
+            </div>
+        </div>
+    </div>
 </div>
+
 <!--Contact Us form section-->
-    <div class="contactformouter container">
+<div class="contactformwrapper">    
+<div class="contactformouter container">
         <div class="row">
             <div class="contactformheading col-12">
                 <h2 class ="col-12">Contact Us Form</h2>
@@ -88,6 +116,12 @@
             <button type="submit" class="btn btn-primary infobutton">Submit</button>
           </form>        
     </div>
+</div>
+
+<!--Footer Section-->
+<div id="footerwrapper">
+   
+</div>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/697e0c65d6.js" crossorigin="anonymous"></script>
