Amended href on Homepage footer item

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             </div>
             <div id="footeritems" class="col-4">
                 <ul>
-                    <li><a  href="placestogo.html"><i class="fas fa-glass-whiskey"></i>Home</a></li>
+                    <li><a  href="index.html"><i class="fas fa-glass-whiskey"></i>Home</a></li>
                     <li><a  href="placestogo.html"><i class="fas fa-glass-whiskey"></i>Places to go</a></li>
                 </ul>
                 
