Added additional bootstrap cols for m/l sizes

--- a/index.html
+++ b/index.html
@@ -65,18 +65,18 @@
     </div>
     <div id="reviewsouter" class="container">
         <div class="row">
-            <div class="review-content col-4">
+            <div class="review-content col-12 col-md-6 col-lg-4">
                 <img class="review-content-image" src="assets\images\Jawbox-Gin_4_3.jpg" alt="Jawbox gin bottle">
                 <h2 class="review-content-heading">Review</h2>
                 <p class="review-content-text">"Honestly, Jawbox is one of the best dry gins that I’ve reviewed in some time and will definitely be one of my new go-to gins from now on!"</p>                                      <p class="review-content-reviewer">Review by: theginkin.com</p>
             </div>
-            <div class="review-content col-4">
+            <div class="review-content col-12 col-md-6 col-lg-4">
                 <img class="review-content-image" src="assets\images\original_shortcross-gin_4_3.jpg" alt="Shortcross gin bottle">
                 <h2 class="review-content-heading">Review</h2>
                 <p class="review-content-text">"Thank you Shortcross for bringing spring time to a very cold, wet London Monday!"</p>
                 <p class="review-content-reviewer">Review by: thelondonginclub.com</p>
             </div>
-            <div class="review-content col-4">
+            <div class="review-content col-12 col-md-6 col-lg-4">
                 <img class="review-content-image" src="assets\images\Echlinville-Gin-Irish-gin_4_3.jpg" alt="Echlinville gin bottle">
                 <h2 class="review-content-heading">Review</h2>
                 <p class="review-content-text">"Echlinville Gin doesn't come cheap but it is worth splashing out on a bottle if you're looking for a gin with a unique personality."</p>
