Minor amendments to bootstrap classes

--- a/index.html
+++ b/index.html
@@ -120,16 +120,16 @@
 <div id="footerwrapper">
     <div id="footerouter" class="container">
         <div class="row">
-            <div id="footerimagery" class="col-4">
+            <div id="footerimagery" class="col-12 col-md-4">
                 <img src="assets\images\LogoCropped.png" alt="Craft Gin Northern Ireland Logo">
             </div>
-            <div id="footertext" class="col-4">
+            <div id="footertext" class="col-12 col-md-4">
                 <p>The Craft Gin Northern Ireland website has been created to showcase the best gin producers and bars/restaurants serving
                     gin across Northern Ireland.<br>
                     Join us on a journey of discovery and sample craft gin like no other!
                 </p>
             </div>
-            <div id="footeritems" class="col-4">
+            <div id="footeritems" class="col-12 col-md-4">
                 <ul>
                     <li><a  href="index.html"><i class="fas fa-glass-whiskey"></i>Home</a></li>
                     <li><a  href="placestogo.html"><i class="fas fa-glass-whiskey"></i>Places to go</a></li>
