Minor amendment to bootstrap grid classes

--- a/placestogo.html
+++ b/placestogo.html
@@ -29,16 +29,16 @@
 <div id="selectionouter" class="container">
         <hr>
     <div id="selectionheading" class="row">
-        <div id="selectionheadingicon" class="col-1">
+        <div id="selectionheadingicon" class="col-12 col-lg-1">
             <i class="fa fa-map-signs fa-5x"></i>
         </div>
-        <div id="selectionheadingtext" class="col-7">
+        <div id="selectionheadingtext" class="col-12 col-lg-7">
             <h2>From across Northern Ireland</h2>
         </div>            
     </div>
 <hr> 
     <div id="selectionchoices" class="row">
-        <div class="dropdown col-3">
+        <div class="dropdown col-4">
             <button class="btn dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">Select Region</button>
                 <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
                     <li><a id="antrimdropdown" class="dropdown-item" href="#">Antrim</a></li>
@@ -49,7 +49,7 @@
                 </ul>
         </div>
 
-        <div class="dropdown col-3">
+        <div class="dropdown col-4">
             <button class="btn dropdown-toggle" type="button" id="dropdownMenuButton2" data-bs-toggle="dropdown" aria-expanded="false">Type</button>
                 <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
                     <li><a id="ginproduceronlybutton" class="dropdown-item" href="#">Gin Producers</a></li>
