Minor amendments to bootstrap classes to aid resp

--- a/placestogo.html
+++ b/placestogo.html
@@ -38,7 +38,7 @@
     </div>
 <hr> 
     <div id="selectionchoices" class="row">
-        <div class="dropdown col-4">
+        <div class="dropdown col-6 col-md-4">
             <button class="btn dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">Select Region</button>
                 <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
                     <li><a id="antrimdropdown" class="dropdown-item" href="#">Antrim</a></li>
@@ -49,7 +49,7 @@
                 </ul>
         </div>
 
-        <div class="dropdown col-4">
+        <div class="dropdown col-6 col-md-4">
             <button class="btn dropdown-toggle" type="button" id="dropdownMenuButton2" data-bs-toggle="dropdown" aria-expanded="false">Type</button>
                 <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
                     <li><a id="ginproduceronlybutton" class="dropdown-item" href="#">Gin Producers</a></li>
@@ -57,7 +57,7 @@
                 </ul>
         </div>
 
-        <div class="dropdown col-4">
+        <div class="dropdown col-6 col-md-4">
             <button onclick="initMap ()" id="showallbutton" class="btn ">Show All</button>
         </div>
     </div>
