Amended wording of categories section heading

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </div>
 
         <div id="categorieslabel">
-          <h3>Select a category below to view <br>
+          <h3>Click below to view <br>
             the gins Northern Ireland has to offer
           </h3>
         </div>
